welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail: error: too many arguments for method hunt: ()Unit
		hunt(getParam(0).asInstanceOf[Color]); 
                    ^SlugSnail:5: error: not found: value c
		if (isFacingTrail(c : Color) == true) {
                                  ^SlugSnail:11: error: not found: value c
    			if (isFacingTrail(c : Color) == false) {
                                          ^